k8s/namespace.yml
# k8s/namespace.yml

apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    environment: production
