k8s/service.yml
# k8s/service.yml

apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__
  namespace: __NAMESPACE__
  labels:
    app: __APP_NAME__
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 30000
    protocol: TCP
    name: http
  selector:
    app: __APP_NAME__
  sessionAffinity: None
